--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "element-plus": "^2.7.1",
     "veloxi": "^0.0.4",
     "vue": "^3.4.21",
-    "vue-markdown-render": "^2.1.1"
+    "vue-markdown-render": "^2.1.1",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
